--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
+title: Willian Justen - Desenvolvedor Front End
 description: A blog about lorem ipsum dolor sit amet
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/cards-jekyll-template" # the subpath of your site, e.g. /blog
 url: "http://bibryam.github.io/" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Lorem Ipsum
 user_description: Anon Developer at Lorem Ipsum Dolor
-user_title: Anon Developer
 email: anon@anon.com
 twitter_username: lorem_ipsum
 github_username:  lorem_ipsum
